k8s/web/admin-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-web
  namespace: fastfood
  labels:
    app: admin-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-web
  template:
    metadata:
      labels:
        app: admin-web
    spec:
      containers:
      - name: admin-web
        image: asia-southeast1-docker.pkg.dev/fastfood-cicd-2025/fastfood-repo/admin-web:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: admin-web
  namespace: fastfood
spec:
  type: NodePort
  selector:
    app: admin-web
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
