k8s/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastfood-ingress
  namespace: fastfood
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: admin-web
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: admin-web
            port:
              number: 80
